# corium

./: CMakeLists.txt  LICENSE  README.md
benchmarks/: main.cpp
include/corium/: AppCore.h  AppCore.hpp  AppCoreContext.h  AppCoreContext.hpp  BackgroundService.h  BackgroundService.hpp  EventBus.h  EventBus.hpp  Events.h  Events.hpp  IBackgroundService.h  IEventSink.h  IEventSink.hpp  Runtime.h  Runtime.hpp  RuntimeBuilder.hpp  ServiceContext.h  ServiceContext.hpp  ServiceRegistry.h  ServiceRegistry.hpp  corium.hpp
include/corium/internal/: CallableTraits.hpp  EventQueue.h  EventQueue.hpp  FastDelegate.hpp  MpscRingBuffer.h  MpscRingBuffer.hpp  Reactor.h  Reactor.hpp  ServiceManager.h  ServiceManager.hpp  VariantIndex.h  VariantIndex.hpp
include/corium/policies/: Policies.h  Policies.hpp  QueuePolicies.hpp  SignalPolicies.hpp  StoragePolicies.hpp
samples/01_basic_app/: main.cpp
samples/02_background_services/: main.cpp
samples/03_custom_events/: main.cpp
samples/04_policy_runtimes/: main.cpp
samples/05_esp32_embedded/: main.cpp
samples/demo/: main.cpp
src/: AppCore.cpp  EventBus.cpp  EventQueue.cpp  Reactor.cpp  Runtime.cpp  ServiceManager.cpp
tests/: test_background_service.cpp  test_fast_delegate.cpp  test_mpsc_ring_buffer.cpp  test_reactor.cpp  test_runtime.cpp
